--- a/style.css
+++ b/style.css
@@ -1,109 +1,66 @@
-/* Estilos básicos */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
 * {
-  box-sizing: border-box;
-  font-family: Arial, sans-serif;
-}
-body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
   background-color: #f5f5f5;
 }
+
 .container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 40px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+
 h1 {
-  margin: 0;
-  font-size: 36px;
-  font-weight: bold;
+  font-size: 3rem;
+  font-weight: 700;
   text-align: center;
-  color: #333;
+  color: #3f51b5;
+  margin-bottom: 2rem;
 }
-h2 {
-  margin-top: 30px;
-  font-size: 24px;
-  font-weight: bold;
-  color: #333;
-}
-h3 {
-  font-size: 18px;
-  font-weight: bold;
-  color: #333;
-}
-label {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 16px;
-  color: #333;
-}
-input[type="text"] {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  color: #333;
-  background-color: #f9f9f9;
-}
-button[type="submit"] {
-  display: block;
-  margin-top: 10px;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff;
-  background-color: #333;
-  cursor: pointer;
-}
-button[type="submit"]:hover {
-  background-color: #444;
-}
-.balance {
-  margin-top: 30px;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 5px;
-}
-table {
-  margin-top: 30px;
-  width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0;
+
+.stats {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1rem;
   background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 }
-th,
-td {
-  padding: 10px;
-  text-align: left;
-  vertical-align: middle;
-  border-bottom: 1px solid #ccc;
-}
-th {
-  background-color: #333;
-  color: #fff;
-}
-tbody tr:hover {
-  background-color: #f5f5f5;
-}
-#status {
-  margin-top: 30px;
-  padding: 20px;
-  border-radius: 5px;
-  font-size: 16px;
-  color: #fff;
+
+.stat {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
 }
-.success {
-  background-color: #4CAF50;
+
+.stat:hover {
+  transform: scale(1.1);
 }
-.error {
-  background-color: #f44336;
+
+.stat h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.stat p {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #777;
 }
